# smart-parking-backend

./: README.md  pyproject.toml
src/core/__seedwork/infra/django/: models.py
src/core/location/infra/location_django_app/: apps.py  models.py
src/core/location/infra/location_django_app/migrations/: 0001_initial.py
src/core/payment/infra/payment_django_app/: apps.py  models.py  router.py  serializers.py  views.py
src/core/payment/infra/payment_django_app/migrations/: 0001_initial.py
src/core/tenant/infra/tenant_django_app/: apps.py  models.py  router.py  serializers.py  views.py
src/core/tenant/infra/tenant_django_app/migrations/: 0001_initial.py
src/core/user/infra/user_django_app/: admin.py  apps.py  models.py  router.py
src/core/user/infra/user_django_app/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_cpf_and_more.py
src/django_project/: router.py  settings.py  urls.py
